Optimize readability, micro-improve performance